[gd_scene load_steps=4 format=3 uid="uid://csyhxfuwxrtah"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/instruction_popup.gd" id="1_1xy4c"]
[ext_resource type="PackedScene" uid="uid://d33carvc0ulrr" path="res://addons/diisis/editor/src/instruction_edit_container.tscn" id="2_3qrya"]
[ext_resource type="Theme" uid="uid://jddhsc4auo55" path="res://addons/diisis/editor/visuals/amber_cherryblossom.tres" id="3_yph8j"]

[node name="InstructionPopup" type="Window"]
title = "Instructions"
initial_position = 2
size = Vector2i(450, 455)
wrap_controls = true
exclusive = true
content_scale_aspect = 1
script = ExtResource("1_1xy4c")

[node name="InstructionEditContainer" parent="." instance=ExtResource("2_3qrya")]
theme = ExtResource("3_yph8j")

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="request_close" from="InstructionEditContainer" to="." method="_on_instruction_edit_container_request_close"]
